force-app/main/default/objects/OrgChartPlus__OCP_Customisation__c/OrgChartPlus__OCP_Customisation__c.object-meta.xml
<CustomObject>
    <description>Customisation rules for OrgChartPlus</description>
    <label>OCP Customisation</label>
    <nameField>
        <displayFormat>OCP-{000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCP Customisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>