force-app/main/default/objects/OrgChartPlus__OCP_Customisation__c/fields/OrgChartPlus__CustomObjectPrefix__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__CustomObjectPrefix__c</fullName>
    <label>Custom Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>