force-app/main/default/objects/OrgChartPlus__OCP_Customisation__c/fields/OrgChartPlus__ForAccounts__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ForAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Accounts</label>
    <type>Checkbox</type>
</CustomField>