force-app/main/default/objects/OrgChartPlus__OCP_Customisation__c/fields/OrgChartPlus__OCPCustomisations__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__OCPCustomisations__c</fullName>
    <label>OCP Customisations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>